[package]
name = "kalman_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.5", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false }
approx = { version = "0.5", default-features = false }