[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#lowpass = { path = "lowpass" }
#highpass = { path = "highpass" }
#kalman = { path = "kalman" }
kalman_no_std = { path = "../kalman_no_std" }

nalgebra = "0.32"
nalgebra-rand-mvn = {git="https://github.com/strawlab/nalgebra-rand-mvn", rev="40dd19c5967b24389452aa8c540f643b10fe4e34"}
env_logger = "0.11"
log = { version = "0.4", features = ["release_max_level_debug"] }
anyhow = "1.0"